fixed some z-index

--- a/components/CookieBanner/CookieBanner.module.scss
+++ b/components/CookieBanner/CookieBanner.module.scss
@@ -4,7 +4,7 @@
 .cookieWrapper {
   position: fixed;
   bottom: 6px;
-  z-index: 15;
+  z-index: 7;
   width: 100%;
 }
 
