--- a/components/SectionContact/ContactForm/ContactForm.module.scss
+++ b/components/SectionContact/ContactForm/ContactForm.module.scss
@@ -8,7 +8,7 @@
   height: 100%;
   width: 100%;
   @include layout.flex(center, center);
-  z-index: 15;
+  z-index: 8;
 }
 
 .form {
